main.tf
resource "aws_security_group" "allow_tls" {
  name        = "${var.name}-${var.env}"
  description =  "Description - ${var.name}-${var.env}"

  ingress {
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    description = "SSH Port"
  }
  #Application port
  ingress {
    from_port        = var.port_no
    to_port          = var.port_no
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    description = "App Port"
  }

  #prometheus port
  ingress {
    from_port        = 9100
    to_port          = 9100
    protocol         = "tcp"
    cidr_blocks      = var.prometheus_servers
    description = "Prometheus Port"
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]

  }
}
resource "aws_instance" "node" {
  ami           = data.aws_ami.ami.id
  instance_type = var.instance_type
  vpc_security_group_ids = [aws_security_group.allow_tls.id]
  #attaching policy  i am role to ec2 
  iam_instance_profile   = aws_iam_instance_profile.main.name

  tags = {
    Name = "${var.name}-${var.env}"
    Monitor = "yes"
    env       = var.env
    component = var.name
  }

  # this to not re-create machines on tf-apply again and again. This will not be needed later when we go with ASG
  lifecycle {
    ignore_changes = [
      "ami"
    ]
  }

}
resource "aws_route53_record" "record" {
 zone_id  = var.zone_id
  name    = "${var.name}-${var.env}.vikramdevops.tech"
  type    = "A"
  ttl     = 30
  records = [aws_instance.node.private_ip]
}

resource "null_resource" "provisioner"{
  depends_on = [aws_route53_record.record]
  #null resource don't know new server is created for we trigger null resource for every new instance
  triggers = {
    instance_id = aws_instance.node.id
  }
  connection {
    host        = aws_instance.node.private_ip
    user        = "ec2-user"
    password    = var.SSH_PASSWORD
    type        = "ssh"
  }
  provisioner "remote-exec" {
    inline = [
      "sudo pip3.11 install hvac",
      "ansible-pull -i localhost, -U https://github.com/vikramdevopsb79/expense-ansible -e role_name=${var.name} -e env=${var.env} -e vault_token=${var.vault_token}  expense.yml"
    ]
  }
}
